# mock-gen

./: README.md  pyproject.toml  requirements.txt
mock_gen/: cli.py  core.py  schema.py
mock_gen/formats/: csv_writer.py  json_writer.py  sql_writer.py
templates/: address.json  product.json  transaction.json  user.json
